[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "bike-sharing-demand"
version = "0.1.0"
description = "Hourly bike sharing demand analysis and prediction"
readme = "README.md"
requires-python = ">=3.11,<3.12"
authors = [
  { name = "Nagaraju Javisetty", email = "nagajavisetty143@gmail.com" }
]

dependencies = [
    "matplotlib==3.7.1",
    "matplotlib-inline==0.1.6",
    "pandas==1.5.3",
    "scikit-learn==1.3.2",
    "seaborn==0.12.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.urls]
Homepage = "https://example.com/voicebot"
